--- a/Multiple Choice Creator/Multiple Choice Creator/Multiple Choice Creator.csproj
+++ b/Multiple Choice Creator/Multiple Choice Creator/Multiple Choice Creator.csproj
@@ -62,6 +62,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BasicInfoVd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BasicInfoVd.Designer.cs">
+      <DependentUpon>BasicInfoVd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CreateProjectVD.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateProjectVD.Designer.cs">
+      <DependentUpon>CreateProjectVD.cs</DependentUpon>
+    </Compile>
     <Compile Include="DaoMysql.cs" />
     <Compile Include="HomeScreen.cs">
       <SubType>Form</SubType>
@@ -89,6 +101,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StartPageVdiamant.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StartPageVdiamant.Designer.cs">
+      <DependentUpon>StartPageVdiamant.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="BasicInfoVd.resx">
+      <DependentUpon>BasicInfoVd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CreateProjectVD.resx">
+      <DependentUpon>CreateProjectVD.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="HomeScreen.resx">
       <DependentUpon>HomeScreen.cs</DependentUpon>
     </EmbeddedResource>
@@ -110,6 +134,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="StartPageVdiamant.resx">
+      <DependentUpon>StartPageVdiamant.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
