add connection with the database to log in form, Complete Register for by adding data to the database, change program to start with login form and remove 2 buttons, add 2 classes theme and themeTree with the function to create the categories tree

--- a/Multiple Choice Creator/Multiple Choice Creator/Multiple Choice Creator.csproj
+++ b/Multiple Choice Creator/Multiple Choice Creator/Multiple Choice Creator.csproj
@@ -128,6 +128,8 @@
     <Compile Include="StartPageVdiamant.Designer.cs">
       <DependentUpon>StartPageVdiamant.cs</DependentUpon>
     </Compile>
+    <Compile Include="Theme.cs" />
+    <Compile Include="themeTree.cs" />
     <EmbeddedResource Include="BasicInfoVd.resx">
       <DependentUpon>BasicInfoVd.cs</DependentUpon>
     </EmbeddedResource>
