--- a/Multiple Choice Creator/Multiple Choice Creator/Multiple Choice Creator.csproj
+++ b/Multiple Choice Creator/Multiple Choice Creator/Multiple Choice Creator.csproj
@@ -108,6 +108,12 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\Answers.cs" />
+    <Compile Include="Model\Course.cs" />
+    <Compile Include="Model\Question.cs" />
+    <Compile Include="Model\Theme.cs" />
+    <Compile Include="Model\University.cs" />
+    <Compile Include="Model\User.cs" />
     <Compile Include="NewHomeScreenPopis.cs">
       <SubType>Form</SubType>
     </Compile>
