--- a/Multiple Choice Creator/Multiple Choice Creator/App.config
+++ b/Multiple Choice Creator/Multiple Choice Creator/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Multiple_Choice_Creator.Properties.Settings.kantonioConnectionString"
+            connectionString="server=192.168.6.177;user id=kantonio;password=123456;persistsecurityinfo=True;database=kantonio"
+            providerName="MySql.Data.MySqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
