--- a/Multiple Choice Creator/Multiple Choice Creator/App.config
+++ b/Multiple Choice Creator/Multiple Choice Creator/App.config
@@ -6,6 +6,9 @@
         <add name="Multiple_Choice_Creator.Properties.Settings.kantonioConnectionString"
             connectionString="server=192.168.6.177;user id=kantonio;password=123456;persistsecurityinfo=True;database=kantonio"
             providerName="MySql.Data.MySqlClient" />
+        <add name="Multiple_Choice_Creator.Properties.Settings.mltChoiceConnString"
+            connectionString="server=192.168.6.177;user id=kantonio;database=kantonio;password=123456"
+            providerName="MySql.Data.MySqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
