--- a/Multiple Choice Creator/Multiple Choice Creator/Multiple Choice Creator.csproj
+++ b/Multiple Choice Creator/Multiple Choice Creator/Multiple Choice Creator.csproj
@@ -113,6 +113,11 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="mltChoiceDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>mltChoiceDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Model\Answer.cs" />
     <Compile Include="Model\Question.cs" />
     <Compile Include="Model\QuestionAnswer.cs" />
@@ -163,6 +168,17 @@
     <EmbeddedResource Include="Register.resx">
       <DependentUpon>Register.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="mltChoiceDataSet.xsc">
+      <DependentUpon>mltChoiceDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="mltChoiceDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>mltChoiceDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="mltChoiceDataSet.xss">
+      <DependentUpon>mltChoiceDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
