--- a/Multiple Choice Creator/Multiple Choice Creator/Properties/Settings.settings
+++ b/Multiple Choice Creator/Multiple Choice Creator/Properties/Settings.settings
@@ -10,5 +10,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">server=192.168.6.177;user id=kantonio;password=123456;persistsecurityinfo=True;database=kantonio</Value>
     </Setting>
+    <Setting Name="mltChoiceConnString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;server=192.168.6.177;user id=kantonio;database=kantonio;password=123456&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;MySql.Data.MySqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">server=192.168.6.177;user id=kantonio;database=kantonio;password=123456</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
