the LastTimeCre field when the question is updated,is updated too...forget it to wirite it... write it now

--- a/Multiple Choice Creator/Multiple Choice Creator/Multiple Choice Creator.csproj
+++ b/Multiple Choice Creator/Multiple Choice Creator/Multiple Choice Creator.csproj
@@ -114,6 +114,9 @@
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="Manage.cs" />
+    <Compile Include="mltChoiceDataSet.cs">
+      <DependentUpon>mltChoiceDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="mltChoiceDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
