changes in the design of left panel .Vasilis will continue it.

--- a/Multiple Choice Creator/Multiple Choice Creator/App.config
+++ b/Multiple Choice Creator/Multiple Choice Creator/App.config
@@ -9,6 +9,12 @@
         <add name="Multiple_Choice_Creator.Properties.Settings.mltChoiceConnString"
             connectionString="server=192.168.6.177;user id=kantonio;database=kantonio;password=123456"
             providerName="MySql.Data.MySqlClient" />
+        <add name="Multiple_Choice_Creator.Properties.Settings.kantonioConnectionString1"
+            connectionString="server=192.168.6.177;user id=kantonio;database=kantonio"
+            providerName="MySql.Data.MySqlClient" />
+        <add name="Multiple_Choice_Creator.Properties.Settings.kantonioConnectionString2"
+            connectionString="server=192.168.6.177;user id=kantonio;database=kantonio;allowuservariables=True;persistsecurityinfo=False"
+            providerName="MySql.Data.MySqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
