Change the ip of server.Becuase the manager changed it.So we have to make it too.

--- a/Multiple Choice Creator/Multiple Choice Creator/App.config
+++ b/Multiple Choice Creator/Multiple Choice Creator/App.config
@@ -3,17 +3,8 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Multiple_Choice_Creator.Properties.Settings.kantonioConnectionString"
-            connectionString="server=192.168.6.177;user id=kantonio;password=123456;persistsecurityinfo=True;database=kantonio"
-            providerName="MySql.Data.MySqlClient" />
         <add name="Multiple_Choice_Creator.Properties.Settings.mltChoiceConnString"
-            connectionString="server=192.168.6.177;user id=kantonio;database=kantonio;password=123456"
-            providerName="MySql.Data.MySqlClient" />
-        <add name="Multiple_Choice_Creator.Properties.Settings.kantonioConnectionString1"
-            connectionString="server=192.168.6.177;user id=kantonio;database=kantonio"
-            providerName="MySql.Data.MySqlClient" />
-        <add name="Multiple_Choice_Creator.Properties.Settings.kantonioConnectionString2"
-            connectionString="server=192.168.6.177;user id=kantonio;database=kantonio;allowuservariables=True;persistsecurityinfo=False"
+            connectionString="server=192.168.6.249;user id=kantonio;password=123456;database=kantonio "
             providerName="MySql.Data.MySqlClient" />
     </connectionStrings>
     <startup> 
