made a small change on settings of project for making functional the functionalities of remember username and passowrd

--- a/Multiple Choice Creator/Multiple Choice Creator/App.config
+++ b/Multiple Choice Creator/Multiple Choice Creator/App.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Multiple_Choice_Creator.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <connectionStrings>
         <add name="Multiple_Choice_Creator.Properties.Settings.mltChoiceConnString"
@@ -10,4 +13,14 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <userSettings>
+        <Multiple_Choice_Creator.Properties.Settings>
+            <setting name="userName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="passUser" serializeAs="String">
+                <value />
+            </setting>
+        </Multiple_Choice_Creator.Properties.Settings>
+    </userSettings>
 </configuration>
