--- a/Multiple Choice Creator/Multiple Choice Creator/Multiple Choice Creator.csproj
+++ b/Multiple Choice Creator/Multiple Choice Creator/Multiple Choice Creator.csproj
@@ -173,6 +173,13 @@
     <Compile Include="Persistence\DaoUsers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuePreview.cs" />
+    <Compile Include="QuestionPreview.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="QuestionPreview.Designer.cs">
+      <DependentUpon>QuestionPreview.cs</DependentUpon>
+    </Compile>
     <Compile Include="Register.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -180,6 +187,12 @@
       <DependentUpon>Register.cs</DependentUpon>
     </Compile>
     <Compile Include="Model\TopicTree.cs" />
+    <Compile Include="testPrintForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="testPrintForm.Designer.cs">
+      <DependentUpon>testPrintForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="VerificationCode.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -225,8 +238,14 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="QuestionPreview.resx">
+      <DependentUpon>QuestionPreview.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Register.resx">
       <DependentUpon>Register.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="testPrintForm.resx">
+      <DependentUpon>testPrintForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VerificationCode.resx">
       <DependentUpon>VerificationCode.cs</DependentUpon>
@@ -266,6 +285,10 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="itextsharp.dll" />
+    <Content Include="iTextSharp.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
