--- a/Multiple Choice Creator/Multiple Choice Creator/Multiple Choice Creator.csproj
+++ b/Multiple Choice Creator/Multiple Choice Creator/Multiple Choice Creator.csproj
@@ -98,6 +98,13 @@
     <Compile Include="ConfirmDelete.Designer.cs">
       <DependentUpon>ConfirmDelete.cs</DependentUpon>
     </Compile>
+    <Compile Include="CreatePDF.cs" />
+    <Compile Include="createPDFcontrol.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="createPDFcontrol.Designer.cs">
+      <DependentUpon>createPDFcontrol.cs</DependentUpon>
+    </Compile>
     <Compile Include="CreateTest.cs" />
     <Compile Include="CreateTestControl.cs">
       <SubType>UserControl</SubType>
@@ -209,6 +216,9 @@
     </Compile>
     <EmbeddedResource Include="ConfirmDelete.resx">
       <DependentUpon>ConfirmDelete.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="createPDFcontrol.resx">
+      <DependentUpon>createPDFcontrol.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CreateTestControl.resx">
       <DependentUpon>CreateTestControl.cs</DependentUpon>
