Add save prefrences to users create pdf choices

--- a/Multiple Choice Creator/Multiple Choice Creator/App.config
+++ b/Multiple Choice Creator/Multiple Choice Creator/App.config
@@ -21,6 +21,27 @@
             <setting name="passUser" serializeAs="String">
                 <value />
             </setting>
+            <setting name="userInfo" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="mail" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="date" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="pdfWithAnsw" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="sendBackup" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="qFontsize" serializeAs="String">
+                <value>15</value>
+            </setting>
+            <setting name="aFontsize" serializeAs="String">
+                <value>13</value>
+            </setting>
         </Multiple_Choice_Creator.Properties.Settings>
     </userSettings>
 </configuration>
